# pyplots

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  LICENSE  PLAUSIBLE.md  README.md  RECREATE-WITH-NEW-QUALITY-RULES.md  SECURITY.md  alembic.ini  codecov.yml  pyproject.toml
.claude/: commands  settings.json
.claude/commands/: bug.md  check.md  chore.md  feature.md  implement.md  prime.md  start.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: plot-request.yml  plot-update.yml  report-impl-issue.yml  report-issue.yml  report-plot-issue.yml  report-spec-issue.yml  request-new-plot.yml  spec-request.yml  spec-update.yml
.github/workflows/: ai-review.yml  auto-merge.yml  bot-ai-review.yml  bot-auto-merge.yml  bot-auto-tag.yml  bot-link-issue.yml  bot-sync-status.yml  bot-sync-status.yml.disabled  bot-validate-request.yml  bot-validate-request.yml.disabled  bulk-generate.yml  ci-lint.yml  ci-plottest.yml  ci-tests.yml  ci-unittest.yml  ci-unittest.yml.disabled  claude.yml  copilot-review.yml  daily-regen.yml  gen-create-spec.yml  gen-library-impl.yml  gen-new-plot.yml  gen-preview.yml  gen-update-plot.yml  gen-update-plot.yml.disabled  impl-generate.yml  impl-merge.yml  impl-repair.yml  impl-review.yml  issue-validate.yml  link-sub-issue.yml  notify-deployment.yml  plot-generator.yml  plot-merge.yml  plot-orchestrator.yml  plot-prepare.yml  plot-review.yml  plottest-and-preview.yml  project-auto-add.yml  quality-check.yml  (+11 more)
.serena/: project.yml
.serena/memories/: code_style.md  commands.md  directory_structure.md  project_overview.md  style_guide.md  suggested_commands.md  task_completion.md
agentic/: README.md  workflow_evaluation.md
agentic/audits/: 2026-04-26-all.md  2026-04-27-all.md  2026-05-05-all.md
agentic/commands/: agentic.md  audit.md  bug.md  chore.md  classify.md  commit.md  context.md  docs.md  document.md  dokument.md  feature.md  implement.md  prime-deep.md  prime.md  pull_request.md  refactor.md  regen.md  review.md  start.md  test.md  update.md
agentic/context/: 260207-footer-responsive-hide-name-add-contact-links.md  260214-batch-sync-to-postgres.md
agentic/docs/: project-guide.md
agentic/specs/: 260129-fix-mcp-trailing-slash-redirect.md  260207-footer-responsive-hide-name-add-contact-links.md  260214-batch-sync-to-postgres.md
agentic/workflows/: build.py  chore_implement.py  commit.py  document.py  patch.py  plan.py  plan_build.py  plan_build_test.py  plan_build_test_review.py  plan_build_test_review_document.py  plan_build_test_review_document_ship.py  prompt.py  pull_request.py  review.py  sdlc.py  ship.py  test.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_metadata_fields.py  003_add_content_and_code_fields.py  004_add_history_fields.py  393d66bd73d9_initial_schema.py  6345896e2e90_add_extended_review_fields.py  6a8ae95eaf56_rename_implementations_to_impls.py  7ccd65103917_add_tags_gin_index.py  a2f4b8c91d23_add_impl_tags.py  b26e9f4b532d_add_description_to_libraries.py  b833d85c09ed_remove_preview_thumb_column.py  c36d82383e1d_remove_review_improvements_column.py  d0c76553a5cc_add_performance_indexes.py  d1d415f44d31_refactor_metadata_remove_history_add_.py  e1f3a2c4d5b6_add_language_to_libraries.py  f2d9c8a1b4e0_add_languages_table_and_preview_variants.py
api/: .dockerignore  Dockerfile  README.md  __init__.py  analytics.py  cache.py  cloudbuild.yaml  dependencies.py  exceptions.py  main.py  schemas.py
api/mcp/: server.py
api/routers/: __init__.py  debug.py  download.py  health.py  insights.py  libraries.py  og_images.py  plots.py  proxy.py  seo.py  specs.py  stats.py
app/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  eslint.config.js  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
app/public/: robots.txt  sitemap.xml
app/src/: App.tsx  main.tsx  router.tsx  test-utils.tsx  vite-env.d.ts
automation/: __init__.py
automation/generators/: __init__.py  plot_generator.py
automation/scripts/: README.md  __init__.py  label_manager.py  migrate_to_new_structure.py  sync_to_postgres.py  upgrade_specs.py  upgrade_specs_ai.py  workflow_cli.py  workflow_utils.py
core/: __init__.py  config.py  constants.py  database.py  images.py  models.py  utils.py
core/database/: __init__.py  connection.py  models.py  repositories.py  types.py
core/generators/: __init__.py  plot_generator.py
docs/: REFACTORING_PROPOSAL.md  architecture.md  audit-interactive-implementations.md  backfill-impl-tags-checklist.md  contributing.md  deployment.md  development.md  index.md  plot-types-catalog.md  poc-implementation-plan.md  specs-guide.md  vision.md  workflow.md
docs/architecture/: api.md  (+8 more)
metadata/: area-basic.yaml  bar-basic.yaml  box-basic.yaml  histogram-basic.yaml  line-basic.yaml  pie-basic.yaml  scatter-basic.yaml  scatter-color-groups.yaml  schema.yaml
prompts/: README.md  auto-tagger.md  default-style-guide.md  impl-tags-generator.md  plot-generator.md  quality-criteria-v2.md  quality-criteria.md  quality-evaluator.md  spec-id-generator.md  spec-tags-generator.md  spec-validator.md
pyplots_mcp/: __init__.py  server.py
rules/: README.md  versions.yaml
scripts/: backfill_responsive_images.py  backfill_review_metadata.py  check_thumbs.py  evaluate-plot.py  fix_library_versions.py  generate_catalog.py  generate_og_samples.py  loadtest.py  migrate_metadata_format.py  migrate_to_new_structure.py  regenerate-thumbnails.py  regenerate_thumbnails.py  regenerate_thumbnails.sh  remove_preview_thumb_from_yaml.py  sync_to_postgres.py  upgrade_specs.py  upgrade_specs_ai.py
specs/: .template.md  260128-mcp-documentation-page.md  260128-remove-sse-mcp-transport.md  VERSIONING.md  area-basic.md  bar-basic.md  box-basic.md  heatmap-correlation.md  histogram-basic.md  line-basic.md  pie-basic-labeled.md  pie-basic.md  scatter-basic-001.md  scatter-basic-005.md  scatter-basic-006.md  scatter-basic-007.md  scatter-basic.md  scatter-color-groups.md  step-basic.md
templates/: metadata.yaml
tests/: README.md  __init__.py  conftest.py
(+7777 files in other folders)
