# pyproject.toml
[project]
name = "pyplots"
version = "0.1.0"
description = "AI-powered Python plotting examples"
authors = [{ name = "Markus Neusinger", email = "admin@pyplots.ai" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "visualization",
    "plotting",
    "matplotlib",
    "data-science",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Data & Plotting
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    # AI & Cloud
    "anthropic>=0.39.0",
    "google-cloud-storage>=2.10.0",
    # Image Processing
    "pillow>=10.0.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Essentials
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pandas-stubs>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # For testing FastAPI
]
dev = [
    "ruff>=0.11.13",
    "pre-commit>=3.6.0",
]
typecheck = [
    "mypy>=1.8.0",
]
plotting = [
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]
all = [
    "pyplots[test,dev,plotting,typecheck]",
]

[project.urls]
Homepage = "https://pyplots.ai"
Repository = "https://github.com/MarkusNeusinger/pyplots"

# ===== Ruff Configuration =====

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "temp",
]

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "W",   # Pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # Line too long
    "C901",  # Too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ===== Pytest Configuration =====

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
    "docs",
    "scripts",
    ".git",
    ".venv",
    "__pycache__",
    "temp",
]
addopts = [
    "--strict-markers",
    "-ra",
]

# ===== Build System =====

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
