# pyproject.toml
[project]
name = "pyplots"
version = "0.2.0"
description = "AI-powered Python plotting examples"
authors = [{ name = "Markus Neusinger", email = "admin@pyplots.ai" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
keywords = [
    "visualization",
    "plotting",
    "matplotlib",
    "data-science",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pg8000>=1.31.0",  # Sync driver for Cloud SQL Connector in GitHub Actions
    "alembic>=1.13.0",
    "cloud-sql-python-connector[asyncpg,pg8000]>=1.18.0",  # Cloud SQL Connector
    # Data & Plotting
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    # Data Science & ML (for plot implementations)
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    # AI & Cloud
    "anthropic>=0.39.0",
    "google-cloud-storage>=2.10.0",
    # Image Processing
    "pillow>=10.0.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Essentials
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "pandas-stubs>=2.3.0",
    # Caching
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # For testing FastAPI
    "aiosqlite>=0.19.0",  # SQLite async driver for integration tests
]
dev = [
    "ruff>=0.11.13",
    "pre-commit>=3.6.0",
]
typecheck = [
    "mypy>=1.8.0",
]
plotting = [
    # Additional plotting libraries (matplotlib already in main dependencies)
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "bokeh>=3.3.0",
    "altair>=5.2.0",
    "plotnine>=0.13.0",
    "pygal>=3.0.0",
    "highcharts-core>=1.10.0",
    "lets-plot>=4.5.0",
    # PNG export dependencies
    "vl-convert-python>=1.3.0",  # altair PNG export
    "kaleido>=0.2.1",            # plotly PNG export
    "selenium>=4.15.0",          # bokeh/highcharts PNG export
    "webdriver-manager>=4.0.0",  # auto-install chromedriver
    "cairosvg>=2.7.0",           # pygal PNG export
    # Common data science stack used across plot implementations
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
]
# Per-library dependencies for CI (minimal installs)
lib-matplotlib = ["matplotlib>=3.9.0", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
lib-seaborn = ["seaborn>=0.13.0", "matplotlib>=3.9.0", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
lib-plotly = ["plotly>=5.18.0", "kaleido>=0.2.1", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
lib-bokeh = ["bokeh>=3.4.0", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0", "selenium>=4.15.0", "webdriver-manager>=4.0.0"]
lib-altair = ["altair>=5.2.0", "vl-convert-python>=1.3.0", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
lib-plotnine = ["plotnine>=0.13.0", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
lib-pygal = ["pygal>=3.0.0", "cairosvg>=2.7.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
lib-highcharts = ["highcharts-core>=1.10.0", "numpy>=1.26.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0", "selenium>=4.15.0", "webdriver-manager>=4.0.0"]
lib-letsplot = ["lets-plot>=4.5.0", "pandas>=2.2.0", "scipy>=1.11.0", "scikit-learn>=1.3.0", "statsmodels>=0.14.0"]
all = [
    "pyplots[test,dev,plotting,typecheck]",
]

[project.urls]
Homepage = "https://pyplots.ai"
Repository = "https://github.com/MarkusNeusinger/pyplots"

# ===== Ruff Configuration =====

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "temp",
    "plots",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "W",   # Pycodestyle warnings
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # Line too long
    "C901",  # Too complex
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["api", "core", "automation"]
split-on-trailing-comma = false

# ===== Pytest Configuration =====

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
    "docs",
    "scripts",
    ".git",
    ".venv",
    "__pycache__",
    "temp",
]
addopts = [
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests with mocks (fast)",
    "integration: Integration tests with real database (slower)",
    "e2e: End-to-end tests covering full API stack (slowest)",
]

# ===== Build System =====

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ===== Setuptools Configuration =====

[tool.setuptools.packages.find]
include = ["api*", "core*", "automation*"]
exclude = ["tests*", "docs*", "app*", "specs*", "rules*", "plots*"]
